@@ -1,0 +1,2 @@
+prog: bug445235_ada_demangle
+vgopts: -q
